edit page added

--- a/ecommarce/footer.html
+++ b/ecommarce/footer.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CUTEPIE</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/odometer-theme-default.css">
-    <link rel="stylesheet" href="/assets/css/slick.css">
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/default.css">
-    <link rel="stylesheet" href="/assets/sass/style.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/odometer-theme-default.css">
+    <link rel="stylesheet" href="../assets/css/slick.css">
+    <link rel="stylesheet" href="../assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets/css/default.css">
+    <link rel="stylesheet" href="../assets/sass/style.css">
 
-    <script src="/assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-5  col-xxl-3 footer-middle-right">
-                        <img src="/assets/images/cutepie-footer-logo.png" alt="cutepie logo">
+                        <img src="../assets/images/cutepie-footer-logo.png" alt="cutepie logo">
                         <p class="address">1487 Rocky Horse Carrefour
                             Arlington, TX 16819</p>
                         <div class="phone-number">
@@ -163,7 +163,7 @@
                 <div class="payment">
                     <p>Payment methods</p>
                     <a href="javascript:void(0)">
-                        <img src="/assets/images/payment.png" alt="payment ways">
+                        <img src="../assets/images/payment.png" alt="payment ways">
                     </a>
                 </div>
                 <div class="social">
@@ -249,10 +249,10 @@
     </footer>
 
 
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/odometer.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="..assets/js/bootstrap.bundle.min.js"></script>
+    <script src="..assets/js/odometer.js"></script>
+    <script src="..assets/js/slick-slider.js"></script>
+    <script src="..assets/js/script.js"></script>
 </body>
 
 </html>
