--- a/ecommarce/header-joy.html
+++ b/ecommarce/header-joy.html
@@ -1740,7 +1740,7 @@
                         <i class="fa fa-user-o"></i>
                         Account
                     </button>
-                    <button onclick="closeNav()" class="closebtn">
+                    <button onclick="closeNav()" class="ecomm-sidenav-closebtn">
                         &times;
                     </button>
 
