--- a/gallery/photo-page.html
+++ b/gallery/photo-page.html
@@ -293,76 +293,87 @@
                 </h2> -->
                 <div class="grid-wrapper">
                     <div class="big position-relative">
-                        <img class="brightness-filter"
-                            src="../assets/images/gallery/brows-photo-gallery/brows-photo-1.jpg" alt="" />
-                        <div class="masonary-image-content">
-                            <h6 class="img-content-category f-14">
-                                Social Media
-                            </h6>
-                            <h5 class="img-content-title ptop-25">Electro & House Mix 2015 & Progressive House Mix
-                                <i class="fa fa-lock theme-color"></i>
-                            </h5>
-                            <div class="ptop-20">
-                                <i class="fa fa-clock-o me-1 theme-color f-14"></i>
-                                <p class="color-white f-14">July 6, 2022</p>
+                        <a href="#" class="w-100 h-100">
+                            <img class="brightness-filter"
+                                src="../assets/images/gallery/brows-photo-gallery/brows-photo-1.jpg" alt="" />
+                            <div class="masonary-image-content w-100">
+                                <h6 class="img-content-category f-14">
+                                    Social Media
+                                </h6>
+                                <h5 class="img-content-title ptop-25">Electro & House Mix 2015 & Progressive House Mix
+                                    <i class="fa fa-lock theme-color"></i>
+                                </h5>
+                                <div class="ptop-20">
+                                    <i class="fa fa-clock-o me-1 theme-color f-14"></i>
+                                    <p class="color-white f-14">July 6, 2022</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="position-relative">
-                        <img class="brightness-filter"
-                            src="https://images.unsplash.com/photo-1588282322673-c31965a75c3e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1351&amp;q=80"
-                            alt="" />
-                        <div class="masonary-image-content">
-                            <h6 class="img-content-category f-13">
-                                Social Media
-                            </h6>
-                            <h5 class="img-content-title ptop-20 f-16">Electro & House Mix 2015 & Progressive House Mix
-                                <i class="fa fa-lock theme-color"></i>
-                            </h5>
-                            <div class="ptop-15">
-                                <i class="fa fa-clock-o me-1 theme-color f-13"></i>
-                                <p class="color-white f-14">July 6, 2022</p>
+                        <a href="#" class="w-100 h-100">
+                            <img class="brightness-filter"
+                                src="https://images.unsplash.com/photo-1588282322673-c31965a75c3e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1351&amp;q=80"
+                                alt="" />
+                            <div class="masonary-image-content w-100">
+                                <h6 class="img-content-category f-13">
+                                    Social Media
+                                </h6>
+                                <h5 class="img-content-title ptop-20 f-16">Electro & House Mix 2015 & Progressive House
+                                    Mix
+                                    <i class="fa fa-lock theme-color"></i>
+                                </h5>
+                                <div class="ptop-15">
+                                    <i class="fa fa-clock-o me-1 theme-color f-13"></i>
+                                    <p class="color-white f-14">July 6, 2022</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="position-relative">
-                        <img class="brightness-filter"
-                            src="https://images.unsplash.com/photo-1588117472013-59bb13edafec?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=500&amp;q=60"
-                            alt="">
-                        <div class="masonary-image-content">
-                            <h6 class="img-content-category f-13">
-                                Social Media
-                            </h6>
-                            <h5 class="img-content-title ptop-20 f-16">Electro & House Mix 2015 & Progressive House Mix
-                                <i class="fa fa-lock theme-color"></i>
-                            </h5>
-                            <div class="ptop-15">
-                                <i class="fa fa-clock-o me-1 theme-color f-13"></i>
-                                <p class="color-white f-14">July 6, 2022</p>
+                        <a href="#" class="w-100 h-100">
+                            <img class="brightness-filter"
+                                src="https://images.unsplash.com/photo-1588117472013-59bb13edafec?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=500&amp;q=60"
+                                alt="">
+                            <div class="masonary-image-content w-100">
+                                <h6 class="img-content-category f-13">
+                                    Social Media
+                                </h6>
+                                <h5 class="img-content-title ptop-20 f-16">Electro & House Mix 2015 & Progressive House
+                                    Mix
+                                    <i class="fa fa-lock theme-color"></i>
+                                </h5>
+                                <div class="ptop-15">
+                                    <i class="fa fa-clock-o me-1 theme-color f-13"></i>
+                                    <p class="color-white f-14">July 6, 2022</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="big position-relative">
-                        <img class="brightness-filter"
-                            src="../assets/images/gallery/brows-photo-gallery/brows-photo-2.jpg" alt="" />
-                        <div class="masonary-image-content">
-                            <h6 class="img-content-category f-14">
-                                Social Media
-                            </h6>
-                            <h5 class="img-content-title ptop-25">Electro & House Mix 2015 & Progressive House Mix
-                                <i class="fa fa-lock theme-color"></i>
-                            </h5>
-                            <div class="ptop-20">
-                                <i class="fa fa-clock-o me-1 theme-color f-14"></i>
-                                <p class="color-white f-14">July 6, 2022</p>
+                        <a href="#" class="w-100 h-100">
+                            <img class="brightness-filter"
+                                src="../assets/images/gallery/brows-photo-gallery/brows-photo-2.jpg" alt="" />
+                            <div class="masonary-image-content w-100">
+                                <h6 class="img-content-category f-14">
+                                    Social Media
+                                </h6>
+                                <h5 class="img-content-title ptop-25">Electro & House Mix 2015 & Progressive House Mix
+                                    <i class="fa fa-lock theme-color"></i>
+                                </h5>
+                                <div class="ptop-20">
+                                    <i class="fa fa-clock-o me-1 theme-color f-14"></i>
+                                    <p class="color-white f-14">July 6, 2022</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="position-relative">
+                        <a href="#" class="w-100 h-100">
                         <img class="brightness-filter"
                             src=" https://images.unsplash.com/photo-1558980663-3685c1d673c4?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=60"
                             alt="" />
-                        <div class="masonary-image-content">
+                        <div class="masonary-image-content w-100">
                             <h6 class="img-content-category f-13">
                                 Social Media
                             </h6>
@@ -374,12 +385,14 @@
                                 <p class="color-white f-14">July 6, 2022</p>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="position-relative">
+                        <a href="#" class="w-100 h-100">
                         <img class="brightness-filter"
                             src="https://images.unsplash.com/photo-1588499756884-d72584d84df5?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=2134&amp;q=80"
                             alt="" />
-                        <div class="masonary-image-content">
+                        <div class="masonary-image-content w-100">
                             <h6 class="img-content-category f-13">
                                 Social Media
                             </h6>
@@ -391,6 +404,7 @@
                                 <p class="color-white f-14">July 6, 2022</p>
                             </div>
                         </div>
+                        </a>
                     </div>
 
                 </div>
