--- a/community/community_index.html
+++ b/community/community_index.html
@@ -438,10 +438,14 @@
                                                     </div>
                                                     <div class="preview-file">
                                                         <img class="previewImg" src="#" alt="">
+                                                        <video controls class="status-video">
+                                                            <source src="mov_bbb.mp4" class="video-status-here">
+                                                              Your browser does not support HTML5 video.
+                                                          </video>
                                                         <button type="button" class="imgClose"><i class="fa fa-times" aria-hidden="true"></i></button>
                                                     </div>
                                                     <div class="media-input">
-                                                        <input accept="image/*" type='file' class="imgInp" />
+                                                        <input type='file' class="imgInp" />
                                                     </div>
                                                 </div>
                                             </div>
@@ -585,7 +589,7 @@
                                 </li>
                             </ul>
                             <ul class="post-comment-list">
-                                <li class="single-comment">
+                                <!-- <li class="single-comment">
                                     <div class="comment-img">
                                         <a href="#">
                                             <img src="../assets/images/community/home/news-post/comment01.jpg" alt="image">
@@ -617,8 +621,65 @@
                                         <p class="comment-content">Donec rutrum congue leo eget malesuada praesent sapien massa convallis a pellentesque nec egestas non nisi curabitur non nulla sit amet nisl tempus convallis quis ac lectus.</p>
                                         <ul class="coment-react">
                                             <li class="comment-like"><a href="#">Like(2)</a></li>
-                                            <li><a href="#">Replay</a></li>
+                                            <li><a href="javascript:void" class="replay-tag">Replay</a></li>
                                         </ul>
+                                    </div>
+                                </li> -->
+                                <li class="single-comment">
+                                    <div class="comment-img">
+                                        <a href="#">
+                                            <img src="../assets/images/community/home/news-post/comment03.jpg" alt="image">
+                                        </a>
+                                    </div>
+                                    <div class="comment-details">
+                                        <div class="coment-info">
+                                            <h6><a href="#">Karen Williams</a></h6>
+                                            <span class="comment-time">3 Mint Ago</span>
+                                        </div>
+                                        <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
+                                        <ul class="coment-react">
+                                            <li class="comment-like"><a href="#">Like(2)</a></li>
+                                            <li><a href="javascript:void(0)" class="replay-tag">Replay</a></li>
+                                        </ul>
+                                        <div class="single-replay-comnt">
+                                            <div class="replay-coment-box">
+                                                <div class="replay-comment-img">
+                                                    <a href="#">
+                                                        <img src="../assets/images/community/home/news-post/comment03.jpg" alt="image">
+                                                    </a>
+                                                </div>
+                                                <div class="replay-comment-details">
+                                                    <div class="replay-coment-info">
+                                                        <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
+                                                        <span class="replay-time-comnt">3 Mint Ago</span>
+                                                    </div>
+                                                    <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
+                                                </div>
+                                            </div>
+                                            <div class="replay-coment-box">
+                                                <div class="replay-comment-img">
+                                                    <a href="#">
+                                                        <img src="../assets/images/community/home/news-post/comment03.jpg" alt="image">
+                                                    </a>
+                                                </div>
+                                                <div class="replay-comment-details">
+                                                    <div class="replay-coment-info">
+                                                        <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
+                                                        <span class="replay-time-comnt">3 Mint Ago</span>
+                                                    </div>
+                                                    <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
+                                                </div>
+                                            </div>
+                                            <div class="new-comment replay-new-comment">
+                                                <a class="new-comment-img replay-comment-img" href="#"><img src="../assets/images/community/home/user-0.jpg" alt="Image"></a>
+                                                <div class="new-comment-input replay-commnt-input">
+                                                    <input type="text" placeholder="Write a comment....">
+                                                    <div class="attached-icon">
+                                                        <a href="#"><i class="fa fa-camera" aria-hidden="true"></i></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </li>
                                 <li class="single-comment">
@@ -635,8 +696,47 @@
                                         <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
                                         <ul class="coment-react">
                                             <li class="comment-like"><a href="#">Like(2)</a></li>
-                                            <li><a href="#">Replay</a></li>
+                                            <li><a href="javascript:void(0)" class="replay-tag">Replay</a></li>
                                         </ul>
+                                        <div class="single-replay-comnt">
+                                            <div class="replay-coment-box">
+                                                <div class="replay-comment-img">
+                                                    <a href="#">
+                                                        <img src="../assets/images/community/home/news-post/comment03.jpg" alt="image">
+                                                    </a>
+                                                </div>
+                                                <div class="replay-comment-details">
+                                                    <div class="replay-coment-info">
+                                                        <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
+                                                        <span class="replay-time-comnt">3 Mint Ago</span>
+                                                    </div>
+                                                    <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
+                                                </div>
+                                            </div>
+                                            <div class="replay-coment-box">
+                                                <div class="replay-comment-img">
+                                                    <a href="#">
+                                                        <img src="../assets/images/community/home/news-post/comment03.jpg" alt="image">
+                                                    </a>
+                                                </div>
+                                                <div class="replay-comment-details">
+                                                    <div class="replay-coment-info">
+                                                        <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
+                                                        <span class="replay-time-comnt">3 Mint Ago</span>
+                                                    </div>
+                                                    <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
+                                                </div>
+                                            </div>
+                                            <div class="new-comment replay-new-comment">
+                                                <a class="new-comment-img replay-comment-img" href="#"><img src="../assets/images/community/home/user-0.jpg" alt="Image"></a>
+                                                <div class="new-comment-input replay-commnt-input">
+                                                    <input type="text" placeholder="Write a comment....">
+                                                    <div class="attached-icon">
+                                                        <a href="#"><i class="fa fa-camera" aria-hidden="true"></i></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </li>
                             </ul>
