service details page vidoe modal

--- a/community/community_index.html
+++ b/community/community_index.html
@@ -633,8 +633,17 @@
                                     </div>
                                     <div class="comment-details">
                                         <div class="coment-info">
-                                            <h6><a href="#">Karen Williams</a></h6>
-                                            <span class="comment-time">3 Mint Ago</span>
+                                            <div>
+                                                <h6><a href="#">Karen Williams</a></h6>
+                                                <span class="comment-time">3 Mint Ago</span>
+                                            </div>
+                                            <div class="comment-option">
+                                                <button type="button" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
+                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                    <li><a href="#" class="post-option-item"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit Post</a></li>
+                                                    <li><a href="#" class="post-option-item"><i class="fa fa-trash-o" aria-hidden="true"></i>  Delete Post</a></li>
+                                                </ul>
+                                            </div>                                            
                                         </div>
                                         <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
                                         <ul class="coment-react">
