--- a/community/community_index.html
+++ b/community/community_index.html
@@ -589,42 +589,6 @@
                                 </li>
                             </ul>
                             <ul class="post-comment-list">
-                                <!-- <li class="single-comment">
-                                    <div class="comment-img">
-                                        <a href="#">
-                                            <img src="../assets/images/community/home/news-post/comment01.jpg" alt="image">
-                                        </a>
-                                    </div>
-                                    <div class="comment-details">
-                                        <div class="coment-info">
-                                            <h6><a href="#">David Moore</a></h6>
-                                            <span class="comment-time">10 Mint Ago</span>
-                                        </div>
-                                        <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget malesuada donec rutrum congue leo eget malesuada. Praesent sapien massa convallis a pellentesque non nisi curabitur non nulla sit amet nisl tempus convallis lectus.</p>
-                                        <ul class="coment-react">
-                                            <li class="comment-like"><a href="#">Like(2)</a></li>
-                                            <li><a href="#">Replay</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="single-comment">
-                                    <div class="comment-img">
-                                        <a href="#">
-                                            <img src="../assets/images/community/home/news-post/coment02.jpg" alt="image">
-                                        </a>
-                                    </div>
-                                    <div class="comment-details">
-                                        <div class="coment-info">
-                                            <h6><a href="#">Claire P. Toy</a></h6>
-                                            <span class="comment-time">5 Mint Ago</span>
-                                        </div>
-                                        <p class="comment-content">Donec rutrum congue leo eget malesuada praesent sapien massa convallis a pellentesque nec egestas non nisi curabitur non nulla sit amet nisl tempus convallis quis ac lectus.</p>
-                                        <ul class="coment-react">
-                                            <li class="comment-like"><a href="#">Like(2)</a></li>
-                                            <li><a href="javascript:void" class="replay-tag">Replay</a></li>
-                                        </ul>
-                                    </div>
-                                </li> -->
                                 <li class="single-comment">
                                     <div class="comment-img">
                                         <a href="#">
@@ -633,13 +597,13 @@
                                     </div>
                                     <div class="comment-details">
                                         <div class="coment-info">
-                                            <div>
+                                            <div class="coment-authore-div">
                                                 <h6><a href="#">Karen Williams</a></h6>
                                                 <span class="comment-time">3 Mint Ago</span>
                                             </div>
                                             <div class="comment-option">
-                                                <button type="button" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
-                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                <button type="button" class="dropdown-toggle comment-option-btn" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
+                                                <ul class="dropdown-menu comment-option-dropdown" aria-labelledby="dropdownMenuButton1">
                                                     <li><a href="#" class="post-option-item"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit Post</a></li>
                                                     <li><a href="#" class="post-option-item"><i class="fa fa-trash-o" aria-hidden="true"></i>  Delete Post</a></li>
                                                 </ul>
@@ -658,9 +622,18 @@
                                                     </a>
                                                 </div>
                                                 <div class="replay-comment-details">
-                                                    <div class="replay-coment-info">
-                                                        <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
-                                                        <span class="replay-time-comnt">3 Mint Ago</span>
+                                                    <div class="replay-coment-info coment-info">
+                                                        <div>
+                                                            <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
+                                                            <span class="replay-time-comnt">3 Mint Ago</span>
+                                                        </div>
+                                                        <div class="comment-option">
+                                                            <button type="button" class="dropdown-toggle comment-option-btn" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
+                                                            <ul class="dropdown-menu comment-option-dropdown" aria-labelledby="dropdownMenuButton1">
+                                                                <li><a href="#" class="post-option-item"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit Post</a></li>
+                                                                <li><a href="#" class="post-option-item"><i class="fa fa-trash-o" aria-hidden="true"></i>  Delete Post</a></li>
+                                                            </ul>
+                                                        </div> 
                                                     </div>
                                                     <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
                                                 </div>
@@ -672,9 +645,18 @@
                                                     </a>
                                                 </div>
                                                 <div class="replay-comment-details">
-                                                    <div class="replay-coment-info">
-                                                        <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
-                                                        <span class="replay-time-comnt">3 Mint Ago</span>
+                                                    <div class="replay-coment-info coment-info">
+                                                        <div>
+                                                            <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
+                                                            <span class="replay-time-comnt">3 Mint Ago</span>
+                                                        </div>
+                                                        <div class="comment-option">
+                                                            <button type="button" class="dropdown-toggle comment-option-btn" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
+                                                            <ul class="dropdown-menu comment-option-dropdown" aria-labelledby="dropdownMenuButton1">
+                                                                <li><a href="#" class="post-option-item"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit Post</a></li>
+                                                                <li><a href="#" class="post-option-item"><i class="fa fa-trash-o" aria-hidden="true"></i>  Delete Post</a></li>
+                                                            </ul>
+                                                        </div> 
                                                     </div>
                                                     <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
                                                 </div>
@@ -699,8 +681,17 @@
                                     </div>
                                     <div class="comment-details">
                                         <div class="coment-info">
-                                            <h6><a href="#">Karen Williams</a></h6>
-                                            <span class="comment-time">3 Mint Ago</span>
+                                            <div class="coment-authore-div">
+                                                <h6><a href="#">Karen Williams</a></h6>
+                                                <span class="comment-time">3 Mint Ago</span>
+                                            </div>
+                                            <div class="comment-option">
+                                                <button type="button" class="dropdown-toggle comment-option-btn" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
+                                                <ul class="dropdown-menu comment-option-dropdown" aria-labelledby="dropdownMenuButton1">
+                                                    <li><a href="#" class="post-option-item"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit Post</a></li>
+                                                    <li><a href="#" class="post-option-item"><i class="fa fa-trash-o" aria-hidden="true"></i>  Delete Post</a></li>
+                                                </ul>
+                                            </div>                                            
                                         </div>
                                         <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
                                         <ul class="coment-react">
@@ -715,9 +706,18 @@
                                                     </a>
                                                 </div>
                                                 <div class="replay-comment-details">
-                                                    <div class="replay-coment-info">
-                                                        <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
-                                                        <span class="replay-time-comnt">3 Mint Ago</span>
+                                                    <div class="replay-coment-info coment-info">
+                                                        <div>
+                                                            <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
+                                                            <span class="replay-time-comnt">3 Mint Ago</span>
+                                                        </div>
+                                                        <div class="comment-option">
+                                                            <button type="button" class="dropdown-toggle comment-option-btn" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
+                                                            <ul class="dropdown-menu comment-option-dropdown" aria-labelledby="dropdownMenuButton1">
+                                                                <li><a href="#" class="post-option-item"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit Post</a></li>
+                                                                <li><a href="#" class="post-option-item"><i class="fa fa-trash-o" aria-hidden="true"></i>  Delete Post</a></li>
+                                                            </ul>
+                                                        </div> 
                                                     </div>
                                                     <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
                                                 </div>
@@ -729,9 +729,18 @@
                                                     </a>
                                                 </div>
                                                 <div class="replay-comment-details">
-                                                    <div class="replay-coment-info">
-                                                        <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
-                                                        <span class="replay-time-comnt">3 Mint Ago</span>
+                                                    <div class="replay-coment-info coment-info">
+                                                        <div>
+                                                            <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
+                                                            <span class="replay-time-comnt">3 Mint Ago</span>
+                                                        </div>
+                                                        <div class="comment-option">
+                                                            <button type="button" class="dropdown-toggle comment-option-btn" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
+                                                            <ul class="dropdown-menu comment-option-dropdown" aria-labelledby="dropdownMenuButton1">
+                                                                <li><a href="#" class="post-option-item"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit Post</a></li>
+                                                                <li><a href="#" class="post-option-item"><i class="fa fa-trash-o" aria-hidden="true"></i>  Delete Post</a></li>
+                                                            </ul>
+                                                        </div> 
                                                     </div>
                                                     <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
                                                 </div>
@@ -763,7 +772,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="main-content posted-content">
+                    <!-- <div class="main-content posted-content">
                         <div class="post-autore d-flex justify-content-between align-items-center">
                             <div class="authore-title d-flex align-items-center">
                                 <a href="#"><img src="../assets/images/community/home/news-post/athore02.jpg" alt="image"></a>
@@ -1046,7 +1055,7 @@
                                 </div>
                             </form>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="load-more mb-30">
                         <a href="#">
                             <span class="loading-icon">
