--- a/services/service-details.html
+++ b/services/service-details.html
@@ -156,8 +156,8 @@
                         <div class="service-provider-info">
                             <h6 class="service-content-title">Video</h6>                            
                             <div class="details-video-div" data-bs-toggle="modal" data-bs-target="#serviceDetailsVideo">
-                                <video class="service-video" >
-                                    <source src="../assets/images/community/20 Second Timer Bomb [3D TIMER] 💣.mkv" type="video/mp4">
+                                <video class="service-video" id="service_video">
+                                    <source src="../assets/images/community/20second.mkv" type="video/mp4">
                                 </video>
                                 <div class="video-play-icon">
                                     <i class="fa fa-play" aria-hidden="true"></i>
